# tasksbot

./: $null  .gitignore  ART_GUIDE_v3.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile.amvera  LICENSE  PET_MOODS_ALL.md  PET_MOODS_CAT.md  PET_MOODS_DRAGON.md  PET_MOODS_FOX.md  PET_MOODS_v1.md  PROJECT_CONTEXT.md  PROJECT_CONTEXT_UPDATED_9 (1).md  README.md  ROADMAP.md  SELF_HOSTING.md  amvera.yml  generate_moods.py  package-lock.json  render.yaml  vercel.json
.github/workflows/: ci.yml  cron-tick.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: api.py  api_admin.py  api_game.py  api_subscription.py  auth.py  bot.py  config.py  db.py  game.py  game_models.py  game_schemas.py  game_seed.py  jobs.py  main.py  nlp.py  nlp_ai.py  rate_limit.py  scheduler.py  schemas.py  subscription.py
docs/: WAVE4_IMAGE_PROMPTS.md  WAVE4_PLAN.md
webapp/: .env.example  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
webapp/src/: App.tsx  api.ts  i18n.tsx  icons.tsx  main.tsx  styles.css  telegram.ts  theme.ts  useLocale.ts
webapp/src/components/: AchievementModal.tsx  Confetti.tsx  DailyRewardModal.tsx  DatePicker.tsx  FocusWidget.tsx  HourlyTimeline.tsx  LimitModal.tsx  OnboardingTour.tsx  PetView.tsx  TaskRow.tsx  Toast.tsx  WheelTimePicker.tsx
webapp/src/pages/: About.tsx  Admin.tsx  All.tsx  Calendar.tsx  Categories.tsx  DailyQuests.tsx  LuckySpin.tsx  Pet.tsx  PetAchievements.tsx  PetCollection.tsx  PetHatch.tsx  PetShop.tsx  Profile.tsx  (+5 more)
(+1 files in other folders)
